<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstract1"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    tools:context=".register">

    <TextView
        android:id="@+id/textView43"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="70dp"
        android:fontFamily="cursive"
        android:text="SMOOTHIEE"
        android:textAlignment="textStart"
        android:textColor="#150531"
        android:textSize="42sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="Let's Get Started!"
        android:textAlignment="center"
        android:textColor="#320D73"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="36dp"
            android:layout_height="37dp"
            app:srcCompat="@drawable/baseline_person_24" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="333dp"
            android:layout_height="49dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="Enter Your Name"
            android:inputType="text"
            android:textColor="#979292" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="36dp"
            android:layout_height="37dp"
            app:srcCompat="@drawable/baseline_phone_24" />

        <EditText
            android:id="@+id/editTextPhone3"
            android:layout_width="333dp"
            android:layout_height="49dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="@string/phone"
            android:textColor="#979292" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="36dp"
            android:layout_height="37dp"
            app:srcCompat="@drawable/baseline_mail_24" />

        <EditText
            android:id="@+id/editTextTextPostalAddress2"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="@string/Address"
            android:textColor="#979292" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/baseline_password_24" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:textColor="#979292" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView50"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/baseline_password_24" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="333dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:hint="@string/ConfirPasswrd"
            android:inputType="textPassword"
            android:textColor="#979292" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="322dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:text="I agree to the terms and conditions"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Sign_Up"
        android:layout_width="181dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>
